ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-commerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: order-service.local # Replace with your domain or use external IP if testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8080
  - host: payment-service.local # Replace with your domain or use external IP if testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8081
  - host: product-service.local # Replace with your domain or use external IP if testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8082
  - host: search-service.local # Replace with your domain or use external IP if testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 8083
  - host: cart-service.local # Replace with your domain or use external IP if testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-service
            port:
              number: 8084
  - host: user-service.local # Replace with your domain or use external IP if testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8085
